force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Total_Tax_AUS__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Total_Tax_AUS__c</fullName>
    <description>The total of Payee Withholding for PAYG, STSL and GST (where applicable).</description>
    <formula>tc9_pr__PAYG_incl_ETP__c + tc9_pr__HELP__c + tc9_pr__SFSS__c + tc9_pr__STSL__c + tc9_pr__PAYG_Voluntary_Deductions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total of Payee Withholding for PAYG, STSL and GST (where applicable).</inlineHelpText>
    <label>Total Tax AUS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>