force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_Earnings_for_NI__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Earnings_for_NI__c</fullName>
    <description>The Payee earnings that are subject to National Insurance contributions.</description>
    <inlineHelpText>The Payee earnings that are subject to National Insurance contributions.</inlineHelpText>
    <label>UK Earnings for NI</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>