force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_EE_NI__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_EE_NI__c</fullName>
    <description>The Employee total NI Contribution.</description>
    <inlineHelpText>The Employee total NI Contribution.</inlineHelpText>
    <label>UK EE NI</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>