force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Apply_Irregular_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Apply_Irregular_Earnings__c</fullName>
    <description>Indicates that a payment is being made to the payee after their P45 has been issued and the user has decided whether to apply the irregular payment rules to the payment, or not.</description>
    <inlineHelpText>Indicates that a payment is being made to the payee after their P45 has been issued and the user has decided whether to apply the irregular payment rules to the payment, or not.</inlineHelpText>
    <label>UK NI Apply Irregular Earnings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>