force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Earn_LEL_to_ST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Earn_LEL_to_ST__c</fullName>
    <description>Payee Earnings for NI - from the Lower Earnings Limit to the Secondary Threshold.</description>
    <inlineHelpText>Payee Earnings for NI - from the Lower Earnings Limit to the Secondary Threshold.</inlineHelpText>
    <label>UK NI Earn - LEL to ST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>