force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Earn_Over_UST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Earn_Over_UST__c</fullName>
    <description>Payee Earnings for NI - over the Upper Secondary Threshold.</description>
    <inlineHelpText>Payee Earnings for NI - over the Upper Secondary Threshold.</inlineHelpText>
    <label>UK NI Earn - Over UST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>