force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Earn_PT_to_UEL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Earn_PT_to_UEL__c</fullName>
    <description>Payee Earnings for NI - from the Primary Threshold to the Upper Earnings Limit.</description>
    <inlineHelpText>Payee Earnings for NI - from the Primary Threshold to the Upper Earnings Limit.</inlineHelpText>
    <label>UK NI Earn - PT to UEL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>