force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Earn_ST_to_CUST__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Earn_ST_to_CUST__c</fullName>
    <description>Payee Earnings for NI - from the Secondary Threshold to the category-specific Upper Secondary Threshold.</description>
    <inlineHelpText>Payee Earnings for NI - from the Secondary Threshold to the category-specific Upper Secondary Threshold.</inlineHelpText>
    <label>UK NI Earn - ST to CUST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>