force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_NI_Earn_to_LEL__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Earn_to_LEL__c</fullName>
    <description>Payee Earnings for NI - up to the Lower Earnings Limit.</description>
    <inlineHelpText>Payee Earnings for NI - up to the Lower Earnings Limit.</inlineHelpText>
    <label>UK NI - Earn to LEL</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>