force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_PAYE_Personal_Allowance__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_PAYE_Personal_Allowance__c</fullName>
    <description>Calculated from the UK Tax Code applicable to the payee pay batch.</description>
    <inlineHelpText>Calculated from the UK Tax Code applicable to the payee pay batch.</inlineHelpText>
    <label>UK PAYE Personal Allowance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>