force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__UK_Student_Loan_Plans__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_Student_Loan_Plans__c</fullName>
    <description>The UK Student Loan Plan(s) applicable to this Payee.</description>
    <inlineHelpText>The UK Student Loan Plan(s) applicable to this Payee.</inlineHelpText>
    <label>UK Student Loan Plans</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__UK_Student_Loan_Plan_Picklists</valueSetName>
    </valueSet>
</CustomField>