force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__VAT__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__VAT__c</fullName>
    <description>The sum total of the Contractor VAT field on all related Pay Transactions with a Record Type of Withholding - VAT.</description>
    <label>VAT</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>