force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__VAT_Contractor_Taxable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__VAT_Contractor_Taxable_Expenses__c</fullName>
    <description>The sum total of Expense pay transactions that should have Contractor VAT calculated on top of them.</description>
    <label>VAT Contractor Taxable Expenses</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>