force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_pr__Withholding_Rule_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Withholding_Rule_Record_Type__c</fullName>
    <description>Indicates whether payee withholding was calculated using PAYG or NON PAYG Tax Tables.</description>
    <inlineHelpText>Indicates whether payee withholding was calculated using PAYG or NON PAYG Tax Tables.</inlineHelpText>
    <label>Withholding Rule Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>