force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/fields/tc9_util__Pay_Batch_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Pay_Batch_Payment_Date__c</fullName>
    <description>Payment Date of the related Pay Batch</description>
    <formula>tc9_pr__Pay_Batch__r.tc9_pr__Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Date of the related Pay Batch</inlineHelpText>
    <label>Pay Batch Payment Date</label>
    <type>Date</type>
</CustomField>