force-app/main/default/objects/tc9_pr__Pay_Batch_Item__c/listViews/tc9_pr__All.listView-meta.xml
<ListView>
    <fullName>tc9_pr__All</fullName>
    <columns>NAME</columns>
    <columns>tc9_pr__Pay_Batch_Manager__c</columns>
    <columns>tc9_pr__Status__c</columns>
    <columns>tc9_pr__Pre_Tax_Deductions__c</columns>
    <columns>tc9_pr__Post_Tax_Deductions__c</columns>
    <columns>tc9_pr__Taxable_Earnings__c</columns>
    <columns>tc9_pr__Taxable_Allowances__c</columns>
    <columns>tc9_pr__Non_Taxable_Payments_Incl_Allowance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>